--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -408,8 +408,16 @@ header .nav-item:hover{
     font-weight: 500;
     color: #000;
 }
+.gird1-add-to-cart.add-to-card{
+    transition: all 300ms;
+}
+.gird1-add-to-cart.add-to-card :hover{
+    background-color: #fff;
+    color: var(--main-color);
+    border: 1px solid var(--main-color);
+}
 .top-card-sec-5,
-.top-card-sec-5 > img{
+.top-card-sec-5  img{
     width: 100%;
     height: 250px;
     object-fit: fill;
